--- a/3dArkanoidsEditor/Views/PlayBoardCanvas.xaml
+++ b/3dArkanoidsEditor/Views/PlayBoardCanvas.xaml
@@ -6,7 +6,10 @@
              xmlns:local="clr-namespace:_3dArkanoidsEditor.Views"
              xmlns:vms="clr-namespace:_3dArkanoidsEditor.ViewModels"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             MouseDown="UserControl_MouseDown"
+             MouseUp="UserControl_MouseUp"
+             MouseLeave="UserControl_MouseLeave">
         <StackPanel Orientation="Horizontal">
             <Canvas x:Name="m_playBoardCanvas" Visibility="Visible" Background="LimeGreen"/>
         <Slider x:Name="m_zSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="0" Maximum="{Binding MaxLayerIndex}" Value="{Binding CurrentLayer, Mode=TwoWay}" Visibility="{Binding Visibility}" Orientation="Vertical" >
